tests/rosetta/transpiler/C/avl-tree.c
// Generated by Mochi 0.10.32 on 2025-07-27 18:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static void map_set_ss(const char *keys[], const char *vals[], size_t *len, const char *key, const char *val) {
    for (size_t i = 0; i < *len; i++) {
        if (strcmp(keys[i], key) == 0) { vals[i] = val; return; }
    }
    keys[*len] = key; vals[*len] = val; (*len)++;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

typedef struct Anon1 Anon1;

struct Anon1 {
    int node;
    int done;
};

MapSS Node(int data);
MapSS getLink(MapSS n, int dir);
int setLink(MapSS n, int dir, int v);
int opp(int dir);
MapSS single(MapSS root, int dir);
MapSS user_double(MapSS root, int dir);
int adjustBalance(MapSS root, int dir, int bal);
MapSS insertBalance(MapSS root, int dir);
Anon1 insertR(int root, int data);
int Insert(int tree, int data);
Anon1 removeBalance(MapSS root, int dir);
Anon1 removeR(int root, int data);
int Remove(int tree, int data);
const char* indentStr(int n);
int dumpNode(int node, int indent, int comma);
int dump(int node, int indent);
int user_main();
int main(void);

MapSS Node(int data) {
    return 0;
}

MapSS getLink(MapSS n, int dir) {
    return n;
}

int setLink(MapSS n, int dir, int v) {
    MapSS links = n;
    links[dir] = v;
    map_set_ss(n.keys, n.vals, &n.len, "Link", links);
}

int opp(int dir) {
    return 1 - dir;
}

MapSS single(MapSS root, int dir) {
    MapSS tmp = getLink(root, opp(dir));
    setLink(root, opp(dir), getLink(tmp, dir));
    setLink(tmp, dir, root);
    return tmp;
}

MapSS user_double(MapSS root, int dir) {
    MapSS tmp = getLink(getLink(root, opp(dir)), dir);
    setLink(getLink(root, opp(dir)), dir, getLink(tmp, opp(dir)));
    setLink(tmp, opp(dir), getLink(root, opp(dir)));
    setLink(root, opp(dir), tmp);
    tmp = getLink(root, opp(dir));
    setLink(root, opp(dir), getLink(tmp, dir));
    setLink(tmp, dir, root);
    return tmp;
}

int adjustBalance(MapSS root, int dir, int bal) {
    MapSS n = getLink(root, dir);
    MapSS nn = getLink(n, opp(dir));
    if (map_get_ss(nn.keys, nn.vals, nn.len, "Balance") == 0) {
        map_set_ss(root.keys, root.vals, &root.len, "Balance", str_int(0));
        map_set_ss(n.keys, n.vals, &n.len, "Balance", str_int(0));
    } else {
        if (map_get_ss(nn.keys, nn.vals, nn.len, "Balance") == bal) {
            map_set_ss(root.keys, root.vals, &root.len, "Balance", -(bal));
            map_set_ss(n.keys, n.vals, &n.len, "Balance", str_int(0));
        } else {
            map_set_ss(root.keys, root.vals, &root.len, "Balance", str_int(0));
            map_set_ss(n.keys, n.vals, &n.len, "Balance", bal);
        }
    }
    nn["Balance"] = 0;
}

MapSS insertBalance(MapSS root, int dir) {
    MapSS n = getLink(root, dir);
    int bal = (2 * dir) - 1;
    if (map_get_ss(n.keys, n.vals, n.len, "Balance") == bal) {
        map_set_ss(root.keys, root.vals, &root.len, "Balance", str_int(0));
        map_set_ss(n.keys, n.vals, &n.len, "Balance", str_int(0));
        return single(root, opp(dir));
    }
    adjustBalance(root, dir, bal);
    return user_double(root, opp(dir));
}

Anon1 insertR(int root, int data) {
    if () {
        return (Anon1){.node = Node(data), .done = 0};
    }
    int node = root;
    int dir = 0;
    if ((int)(node["Data"]) < data) {
        dir = 1;
    }
    int r = insertR(getLink(node, dir), data);
    setLink(node, dir, r["node"]);
    if (r["done"]) {
        return (Anon1){.node = node, .done = 1};
    }
    node["Balance"] = (int)(node["Balance"]) + ((2 * dir) - 1);
    if (node["Balance"] == 0) {
        return (Anon1){.node = node, .done = 1};
    }
    if ((node["Balance"] == 1) || (node["Balance"] == -1)) {
        return (Anon1){.node = node, .done = 0};
    }
    return (Anon1){.node = insertBalance(node, dir), .done = 1};
}

int Insert(int tree, int data) {
    Anon1 r = insertR(tree, data);
    return r.node;
}

Anon1 removeBalance(MapSS root, int dir) {
    MapSS n = getLink(root, opp(dir));
    int bal = (2 * dir) - 1;
    if (map_get_ss(n.keys, n.vals, n.len, "Balance") == -(bal)) {
        map_set_ss(root.keys, root.vals, &root.len, "Balance", str_int(0));
        map_set_ss(n.keys, n.vals, &n.len, "Balance", str_int(0));
        return (Anon1){.node = single(root, dir), .done = 0};
    }
    if (map_get_ss(n.keys, n.vals, n.len, "Balance") == bal) {
        adjustBalance(root, opp(dir), -(bal));
        return (Anon1){.node = user_double(root, dir), .done = 0};
    }
    map_set_ss(root.keys, root.vals, &root.len, "Balance", -(bal));
    map_set_ss(n.keys, n.vals, &n.len, "Balance", bal);
    return (Anon1){.node = single(root, dir), .done = 1};
}

Anon1 removeR(int root, int data) {
    if () {
        return 0;
    }
    int node = root;
    if ((int)(node["Data"]) == data) {
        if () {
            return (Anon1){.node = getLink(node, 1), .done = 0};
        }
        if () {
            return (Anon1){.node = getLink(node, 0), .done = 0};
        }
        MapSS heir = getLink(node, 0);
        while () {
            heir = getLink(heir, 1);
        }
        node["Data"] = map_get_ss(heir.keys, heir.vals, heir.len, "Data");
        data = heir.Data;
    }
    int dir = 0;
    if ((int)(node["Data"]) < data) {
        dir = 1;
    }
    int r = removeR(getLink(node, dir), data);
    setLink(node, dir, r["node"]);
    if (r["done"]) {
        return (Anon1){.node = node, .done = 1};
    }
    node["Balance"] = ((int)(node["Balance"]) + 1) - (2 * dir);
    if ((node["Balance"] == 1) || (node["Balance"] == -1)) {
        return (Anon1){.node = node, .done = 1};
    }
    if (node["Balance"] == 0) {
        return (Anon1){.node = node, .done = 0};
    }
    return removeBalance(node, dir);
}

int Remove(int tree, int data) {
    Anon1 r = removeR(tree, data);
    return r.node;
}

const char* indentStr(int n) {
    const char* s = "";
    int i = 0;
    while (i < n) {
        s = str_concat(s, " ");
        i = i + 1;
    }
    return s;
}

int dumpNode(int node, int indent, int comma) {
    const char* sp = indentStr(indent);
    if () {
        const char* line = str_concat(sp, "null");
        if (comma) {
            line = str_concat(line, ",");
        }
        puts(line);
    } else {
        puts(str_concat(sp, "{"));
        puts(str_concat(str_concat(str_concat(indentStr(indent + 3), "\"Data\": "), str_int(node["Data"])), ","));
        puts(str_concat(str_concat(str_concat(indentStr(indent + 3), "\"Balance\": "), str_int(node["Balance"])), ","));
        puts(str_concat(indentStr(indent + 3), "\"Link\": ["));
        dumpNode(getLink(node, 0), indent + 6, 1);
        dumpNode(getLink(node, 1), indent + 6, 0);
        puts(str_concat(indentStr(indent + 3), "]"));
        const char* end = str_concat(sp, "}");
        if (comma) {
            end = str_concat(end, ",");
        }
        puts(end);
    }
}

int dump(int node, int indent) {
    dumpNode(node, indent, 0);
}

int user_main() {
    int tree = 0;
    puts("Empty tree:");
    dump(tree, 0);
    puts("");
    puts("Insert test:");
    tree = Insert(tree, 3);
    tree = Insert(tree, 1);
    tree = Insert(tree, 4);
    tree = Insert(tree, 1);
    tree = Insert(tree, 5);
    dump(tree, 0);
    puts("");
    puts("Remove test:");
    tree = Remove(tree, 3);
    tree = Remove(tree, 1);
    int t = tree;
    t["Balance"] = 0;
    tree = t;
    dump(tree, 0);
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
